// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureProvider DANGER_V1 active 1`] = `
<div>
  <span>
    Oh Noes!
  </span>
</div>
`;

exports[`FeatureProvider SUCCESS_V1 active 1`] = `
<div>
  <span>
    YATTA
  </span>
</div>
`;

exports[`FeatureProvider UNKNOWN_V1 active 1`] = `
<div>
  <span
    aria-label="man-shrugging"
    role="img"
  >
    🤷‍♂
  </span>
</div>
`;

exports[`FeatureProvider empty array 1`] = `
<div>
  <span
    aria-label="man-shrugging"
    role="img"
  >
    🤷‍♂
  </span>
</div>
`;

exports[`FeatureProvider when "null" then it should throw 1`] = `"the \\"features\\" argument must be an array"`;

exports[`FeatureProvider when "undefined" then it should throw 1`] = `"the \\"features\\" argument must be an array"`;
